test/ui/src/compile_fail/std/fn_name_unbound.rs
#![deny(unused_variables)]

#[emit::span(fn_name, "main function")]
fn main() {
    
}
